--- a/app/composer.json
+++ b/app/composer.json
@@ -14,6 +14,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
         "symfony/http-client": "5.2.*",
+        "symfony/phpunit-bridge": "^5.2",
         "symfony/twig-bundle": "5.2.*",
         "symfony/yaml": "5.2.*",
         "twig/intl-extra": "^3.3"
