--- a/app/composer.json
+++ b/app/composer.json
@@ -9,7 +9,9 @@
         "ext-iconv": "*",
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/asset": "5.2.*",
+        "symfony/browser-kit": "5.2.*",
         "symfony/console": "5.2.*",
+        "symfony/css-selector": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
